--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,1 +1,9 @@
+[package]
+name = "megastore_search"
+version = "0.1.0"
+edition = "2024"
 
+[dependencies]
+regex = "1.8"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
